--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,31 @@
-Flask==0.10.1
+appnope==0.1.0
+beautifulsoup4==4.6.0
+bs4==0.0.1
+click==6.7
+decorator==4.1.2
+Flask==0.12.2
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
-Jinja2==2.7.1
-MarkupSafe==0.18
-MySQL-python==1.2.3
-WTForms==1.0.5
-Werkzeug==0.9.4
-BeautifulSoup==3.2.1
+gitdata==0.0.0
 gunicorn==18.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+jedi==0.11.0
+Jinja2==2.10
+MarkupSafe==1.0
+mysqlclient==1.3.12
+parso==0.1.0
+pexpect==4.3.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 requests==2.2.1
+simplegeneric==0.8.1
+six==1.11.0
+SQLAlchemy==1.1.15
+traitlets==4.3.2
+wcwidth==0.1.7
+Werkzeug==0.13
+WTForms==1.0.5
