Cleanup, begin adding thread info

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ appnope==0.1.0
 beautifulsoup4==4.6.0
 bs4==0.0.1
 click==6.7
+cssselect==1.0.1
 decorator==4.1.2
+eutils==0.3.2
 Flask==0.12.2
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
@@ -13,19 +15,28 @@ ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.11.0
 Jinja2==2.10
+lxml==4.1.1
 MarkupSafe==1.0
+metapub==0.4.3.6
 mysqlclient==1.3.12
 parso==0.1.0
 pexpect==4.3.1
 pickleshare==0.7.4
+pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+py==1.5.2
 Pygments==2.2.0
+pytz==2017.3
 requests==2.2.1
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
+tabulate==0.8.2
+tox==2.9.1
 traitlets==4.3.2
+Unidecode==0.4.21
+virtualenv==15.1.0
 wcwidth==0.1.7
 Werkzeug==0.13
 WTForms==1.0.5
