--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 appnope==0.1.0
 beautifulsoup4==4.6.0
 bs4==0.0.1
+certifi==2017.11.5
+chardet==3.0.4
 click==6.7
+crossrefapi==1.2.0
 cssselect==1.0.1
 decorator==4.1.2
+doi2bib==0.3.0
 eutils==0.3.2
 Flask==0.12.2
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
+future==0.16.0
 gitdata==0.0.0
 gunicorn==18.0
+idna==2.6
 ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
@@ -20,15 +26,19 @@ MarkupSafe==1.0
 metapub==0.4.3.6
 mysqlclient==1.3.12
 parso==0.1.0
+pdfminer2==20151206
+pdfx==1.3.0
 pexpect==4.3.1
 pickleshare==0.7.4
+Pillow==4.3.0
 pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 py==1.5.2
 Pygments==2.2.0
+python-dateutil==2.6.1
 pytz==2017.3
-requests==2.2.1
+requests==2.18.4
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
@@ -36,6 +46,7 @@ tabulate==0.8.2
 tox==2.9.1
 traitlets==4.3.2
 Unidecode==0.4.21
+urllib3==1.22
 virtualenv==15.1.0
 wcwidth==0.1.7
 Werkzeug==0.13
