Fix fulltext search

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ arrow==0.12.0
 arxiv==0.2.2
 beautifulsoup4==4.6.0
 bibtexparser==0.6.2
+blinker==1.4
 bs4==0.0.1
 certifi==2017.11.5
 chardet==3.0.4
@@ -13,8 +14,11 @@ decorator==4.1.2
 doi2bib==0.3.0
 eutils==0.3.2
 feedparser==5.2.1
+flake8==3.5.0
 Flask==0.12.2
-Flask-SQLAlchemy==1.0
+Flask-DebugToolbar==0.10.1
+flask-shell-ipython==0.3.0
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.9.4
 future==0.16.0
 gcloud==0.18.3
@@ -22,14 +26,17 @@ gitdata==0.0.0
 googleapis-common-protos==1.5.3
 gunicorn==18.0
 httplib2==0.10.3
+huey==1.5.6
 idna==2.6
 ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.11.0
 Jinja2==2.10
+logzero==1.3.1
 lxml==4.1.1
 MarkupSafe==1.0
+mccabe==0.6.1
 metapub==0.4.3.6
 mysqlclient==1.3.12
 oauth2client==4.1.2
@@ -47,16 +54,20 @@ ptyprocess==0.5.2
 py==1.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+pycodestyle==2.3.1
+pyflakes==1.6.0
 Pygments==2.2.0
 python-dateutil==2.6.1
 python-slugify==1.2.4
 pytz==2017.3
+redis==2.10.6
 requests==2.18.4
 requests-file==1.4.2
 rsa==3.4.2
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.1.15
+SQLAlchemy==1.2.0
+SQLAlchemy-FullText-Search==0.2.3
 swot-python==1.1.1
 tabulate==0.8.2
 tldextract==2.0.2
