--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 appnope==0.1.0
 arrow==0.12.0
 arxiv==0.2.2
+asn1crypto==0.24.0
+bcrypt==3.1.4
 beautifulsoup4==4.6.0
 bibtexparser==0.6.2
 blinker==1.4
 bs4==0.0.1
 certifi==2017.11.5
+cffi==1.11.2
 chardet==3.0.4
 click==6.7
 crossrefapi==1.2.0
+cryptography==2.1.4
 cssselect==1.0.1
 decorator==4.1.2
 doi2bib==0.3.0
 eutils==0.3.2
+Fabric3==1.13.1.post1
 feedparser==5.2.1
 flake8==3.5.0
 Flask==0.12.2
@@ -40,6 +45,7 @@ metapub==0.4.3.6
 mysqlclient==1.3.12
 oauth2client==4.1.2
 olefile==0.44
+paramiko==2.4.0
 parso==0.1.0
 pdfminer2==20151206
 pdfx==1.3.0
@@ -54,8 +60,10 @@ py==1.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycodestyle==2.3.1
+pycparser==2.18
 pyflakes==1.6.0
 Pygments==2.2.0
+PyNaCl==1.2.1
 python-dateutil==2.6.1
 python-slugify==1.2.4
 pytz==2017.3
