--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ nocleanup = true
 childlogdir = /tmp
 
 [program:upvote]
-command = gunicorn --log-file log.txt -b :%(ENV_PORT)s base:app
+command = gunicorn -b :%(ENV_PORT)s base:app
 autostart=true
 autorestart=true
 directory=/app
