--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.6.0
 bibtexparser==0.6.2
 blinker==1.4
 bs4==0.0.1
+cachetools==2.0.1
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
@@ -15,6 +16,7 @@ crossrefapi==1.2.0
 cryptography==2.1.4
 cssselect==1.0.1
 decorator==4.1.2
+dill==0.2.7.1
 doi2bib==0.3.0
 eutils==0.3.2
 Fabric3==1.13.1.post1
@@ -24,10 +26,18 @@ Flask==0.12.2
 Flask-DebugToolbar==0.10.1
 flask-shell-ipython==0.3.0
 Flask-SQLAlchemy==2.3.2
+Flask-SSLify==0.1.5
 Flask-WTF==0.9.4
 future==0.16.0
+gapic-google-cloud-logging-v2==0.91.3
 gcloud==0.18.3
+google-api-core==0.1.3
+google-auth==1.2.1
+google-cloud-core==0.28.0
+google-cloud-logging==1.4.0
+google-gax==0.15.16
 googleapis-common-protos==1.5.3
+grpcio==1.8.3
 gunicorn==18.0
 httplib2==0.10.3
 huey==1.5.6
@@ -43,7 +53,7 @@ MarkupSafe==1.0
 mccabe==0.6.1
 metapub==0.4.3.6
 mysqlclient==1.3.12
-oauth2client==4.1.2
+oauth2client==3.0.0
 olefile==0.44
 paramiko==2.4.0
 parso==0.1.0
@@ -53,8 +63,10 @@ pexpect==4.3.1
 pickleshare==0.7.4
 Pillow==4.3.0
 pluggy==0.6.0
+ply==3.8
 prompt-toolkit==1.0.15
-protobuf==3.5.0.post1
+proto-google-cloud-logging-v2==0.91.3
+protobuf==3.5.1
 ptyprocess==0.5.2
 py==1.5.2
 pyasn1==0.4.2
