--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
 pidfile = /tmp/supervisord.pid
-nodaemon = false
+nodaemon = true
 minfds = 1024
 minprocs = 200
 umask = 022
@@ -15,22 +15,23 @@ childlogdir = /tmp
 
 [program:upvote]
 command = gunicorn -b :%(ENV_PORT)s base:app
+directory=/app
 autostart=true
 autorestart=true
-directory=/app
 redirect_stderr=true
 stopsignal=QUIT
-stdout_logfile=/app/upvote_out.log
-stderr_logfile=/app/upvote_err.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:upvote_huey]
 command=flask worker
 directory=/app
 autostart=true
 autorestart=true
-stdout_logfile=huey.log
 redirect_stderr=true
-stdout_logfile=/app/huey_out.log
-stderr_logfile=/app/huey_err.log
-stdout_events_enabled=true
-stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
