--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asn1crypto==0.24.0
 bcrypt==3.1.4
 beautifulsoup4==4.6.0
 bibtexparser==0.6.2
+bleach==2.1.2
 blinker==1.4
 bs4==0.0.1
 cachetools==2.0.1
@@ -39,6 +40,7 @@ google-gax==0.15.16
 googleapis-common-protos==1.5.3
 grpcio==1.8.3
 gunicorn==18.0
+html5lib==1.0.1
 httplib2==0.10.3
 huey==1.5.6
 idna==2.6
@@ -49,6 +51,7 @@ jedi==0.11.0
 Jinja2==2.10
 logzero==1.3.1
 lxml==4.1.1
+markdown2==2.3.5
 MarkupSafe==1.0
 mccabe==0.6.1
 metapub==0.4.3.6
@@ -96,5 +99,6 @@ urllib3==1.22
 virtualenv==15.1.0
 Wand==0.4.4
 wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.13
 WTForms==1.0.5
