--- a/requirements.txt
+++ b/requirements.txt
@@ -80,12 +80,14 @@ pyflakes==1.6.0
 Pygments==2.2.0
 PyNaCl==1.2.1
 python-dateutil==2.6.1
+python-http-client==3.0.0
 python-slugify==1.2.4
 pytz==2017.3
 redis==2.10.6
 requests==2.18.4
 requests-file==1.4.2
 rsa==3.4.2
+sendgrid==5.3.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.2.0
