--- a/app.yaml
+++ b/app.yaml
@@ -5,12 +5,12 @@ entrypoint: /usr/bin/supervisord -c /app/supervisord.conf
 runtime_config:
   python_version: 3.6
 
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 5
+  cool_down_period_sec: 180
+  cpu_utilization:
+    target_utilization: 0.6
 
 readiness_check:
   path: "/ready"
