update for open sourcing

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ nocleanup = true
 childlogdir = /tmp
 
 [program:upvote]
-command = gunicorn -b :%(ENV_PORT)s base:app
+command = gunicorn -b :8080 base:app
 directory=/app
 autostart=true
 autorestart=true
